[tool.poetry]
name = "{{CHANGE-THIS}}"
version = "0.1.0"
description = "{{CHANGE-THIS}}"
authors = ["Alexis THIBAULT <alexis.thibault31@gmail.com>"]
license = "LICENSE"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.114.2"}
uvicorn = {extras = ["standard"], version = "^0.30.6"}
pydantic = "^2.9.1"
sqlmodel = "^0.0.22"
alembic = "^1.13.2"
psycopg = {extras = ["binary"], version = "^3.2.1"}
pydantic-settings = "^2.5.2"
tenacity = "^9.0.0"
logging = "^0.4.9.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
mypy = "^1.11.2"
ruff = "^0.6.5"
coverage = "^7.6.1"
pre-commit = "^3.8.0"
httpx = "^0.27.2"
pytest-cov = "^5.0.0"
polyfactory = "^2.16.2"
sqlalchemy = {extras = ["mypy"], version = "^2.0.34"}
sqlalchemy-utils = "^0.41.2"
types-sqlalchemy-utils = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
cache_dir = ".pytest_cache"
python_files = "tests_*.py"

[tool.coverage.run]
omit = [
    "alembic/*",
    "**/__init__.py",
    "scripts/*",
    "tests/*",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[tool.mypy]
strict = true
exclude = ["alembic", "tests.factories"]
plugins = [
    "pydantic.mypy",
]

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
    "B008",
    "W191",
    "B904",
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
